--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tensorflow/tfjs": "4.22.0",
     "dexie": "4.2.1",
     "dexie-react-hooks": "4.2.0",
+    "firebase": "12.7.0",
     "lightweight-charts": "5.0.9",
     "pdfjs-dist": "5.4.449",
     "react": "19.2.3",
