--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Firebase Configuration
 # Copy this file to .env and fill in your Firebase project values
-VITE_FIREBASE_API_KEY=AIzaSyCK3O6MaCDLdwYlR-evLoxzGIeFVe5YjB0
-VITE_FIREBASE_AUTH_DOMAIN=finance-tracker-ghw.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=finance-tracker-ghw
-VITE_FIREBASE_STORAGE_BUCKET=finance-tracker-ghw.firebasestorage.app
-VITE_FIREBASE_MESSAGING_SENDER_ID=952461543464
-VITE_FIREBASE_APP_ID=1:952461543464:web:eef2d8358d7648e4258d1d
+VITE_FIREBASE_API_KEY=
+VITE_FIREBASE_AUTH_DOMAIN=
+VITE_FIREBASE_PROJECT_ID=
+VITE_FIREBASE_STORAGE_BUCKET=
+VITE_FIREBASE_MESSAGING_SENDER_ID=
+VITE_FIREBASE_APP_ID=
